refactor: remove dependency org.springframework.boot:spring-boot-starter-hateoas