@@ -1,21 +1,16 @@
 package myreader.resource.subscriptionentry;
 
-import myreader.entity.SubscriptionEntry;
 import myreader.repository.SubscriptionEntryRepository;
 import myreader.resource.subscriptionentry.beans.SearchRequest;
-import myreader.resource.subscriptionentry.beans.SubscriptionEntryGetResponse;
-import org.springframework.hateoas.IanaLinkRelations;
-import org.springframework.hateoas.Link;
-import org.springframework.hateoas.PagedModel;
-import org.springframework.hateoas.server.RepresentationModelAssembler;
+import myreader.resource.subscriptionentry.converter.SubscriptionEntryGetResponseConverter;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
+import java.util.TreeMap;
 
 import static myreader.resource.ResourceConstants.SUBSCRIPTION_ENTRIES;
 import static myreader.resource.ResourceConstants.SUBSCRIPTION_ENTRIES_AVAILABLE_TAGS;
@@ -23,11 +18,11 @@ import static myreader.resource.ResourceConstants.SUBSCRIPTION_ENTRIES_AVAILABLE
 @RestController
 public class SubscriptionEntryCollectionResource {
 
-  private final RepresentationModelAssembler<SubscriptionEntry, SubscriptionEntryGetResponse> assembler;
+  private final SubscriptionEntryGetResponseConverter assembler;
   private final SubscriptionEntryRepository subscriptionEntryRepository;
 
   public SubscriptionEntryCollectionResource(
-    RepresentationModelAssembler<SubscriptionEntry, SubscriptionEntryGetResponse> assembler,
+    SubscriptionEntryGetResponseConverter assembler,
     SubscriptionEntryRepository subscriptionEntryRepository
   ) {
     this.assembler = assembler;
@@ -35,7 +30,7 @@ public class SubscriptionEntryCollectionResource {
   }
 
   @GetMapping(SUBSCRIPTION_ENTRIES)
-  public PagedModel<SubscriptionEntryGetResponse> get(SearchRequest searchRequest) {
+  public Map<String, Object> get(SearchRequest searchRequest) {
     var slicedEntries = subscriptionEntryRepository.findBy(
       searchRequest.getFeedUuidEqual(),
       searchRequest.getFeedTagEqual(),
@@ -44,16 +39,22 @@ public class SubscriptionEntryCollectionResource {
       searchRequest.getNext()
     ).map(assembler::toModel);
 
-    var builder = ServletUriComponentsBuilder.fromCurrentRequest().replaceQueryParam("next", Collections.emptyList());
-    List<Link> links = new ArrayList<>();
-    links.add(Link.of(builder.toUriString(), IanaLinkRelations.SELF));
+    var builder = ServletUriComponentsBuilder
+      .fromCurrentRequest()
+      .replaceQueryParam("next", List.of());
+
+    String nextUrl = null;
 
     if (slicedEntries.hasNext()) {
       var last = slicedEntries.getContent().get(slicedEntries.getSize() - 1);
-      links.add(Link.of(builder.queryParam("next", last.getUuid()).toUriString(), IanaLinkRelations.NEXT));
+      nextUrl = builder.queryParam("next", last.getUuid()).toUriString();
     }
 
-    return PagedModel.of(slicedEntries.getContent(), null, links);
+    Map<String, Object> response = new TreeMap<>();
+    response.put("next", nextUrl);
+    response.put("content", slicedEntries.getContent());
+
+    return response;
   }
 
   @GetMapping(SUBSCRIPTION_ENTRIES_AVAILABLE_TAGS)
